# BWInf

./: .gitignore  BWInf.lkshs  BWInf.lkshw  README  README.markdown
Aufgabe 1/: .gitignore  Makefile
Aufgabe 1/src/: Makefile  bambus.cfdg  variations.list
Aufgabe1/: .gitignore  Makefile
Aufgabe1/doc/: Makefile  doc.tex
Aufgabe1/src/: T-Stück.ggb  bambus.cfdg
Aufgabe3/: .gitignore  Aufgabe3.cabal  README  VerfahrenTeil2.txt
Aufgabe3/Material/: 3Fahrzeuge.txt  logistisch1.txt  logistisch2.txt  logistisch3.txt  logistisch4.txt  readme.txt
Aufgabe3/doc/: Makefile  doc.tex  doc.tex.lhs  highlighter.py
Aufgabe3/src/: Main.hs
Aufgabe3/src/Aufgabe3/: Algorithmen.hs  Datatypes.hc  Datatypes.hs  IO.hs
Aufgabe3/testdaten/: 1Fahrzeug.txt
Aufgabe4/: .gitignore  Aufgabe4.cabal  Makefile
Aufgabe4/Beispiele/: Beispiel1.dump  Beispiel2.dump  Beispiel3.dump  Beispiel4.dump  Beispiel5.dump  Beispiel6.dump  Beispiel7.dump
Aufgabe4/doc/: Makefile  doc.tex
Aufgabe4/src/: Main.hs  Makefile  StrictState.hs
Aufgabe4/src/Aufgabe4/: Datentypen.hs  IO.hs  Statistik.hs
