name: Aufgabe4
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: array -any, base >=4.0.0, containers -any, mtl -any,
               random -any, xorshift -any
stability:
homepage:
package-url:
bug-reports:
synopsis: Aufgabe 4 des 29. BWInf
description: .
category:
author:
tested-with: GHC -any
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Aufgabe4
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Aufgabe4.Statistik Aufgabe4.Datentypen
               Aufgabe4.IO
ghc-prof-options:
ghc-shared-options:
ghc-options: -O3 -Wall -Werror
hugs-options:
nhc98-options:
jhc-options:
